src/test/deca/syntax/valid/test_synt/variables/declaration_wrong.deca
// Description:
//    Test  
//    
// Resultats:
//    Lexeur: pas d'erreur
//    Parseur: erreur pusique dans notre language deca on ne peut declarer des variables qu'au debut de notre program 
//
// Historique:
//    cree le 11/01/2022

{
    int x ; 
    x = 5  ;
    int y ;  
    y = 6 ;
   println( x + y);
}


